--- a/foreman.toml
+++ b/foreman.toml
@@ -1,4 +1,5 @@
 [tools]
+rojo = { github = "rojo-rbx/rojo", version = "7.0.0" }
 selene = { github = "Kampfkarren/Selene", version = "0.16.0" }
 stylua = { source = "JohnnyMorganz/stylua", version = "0.12.5" }
 wally = { source = "UpliftGames/wally", version = "0.3.1" }
