made the active screengui in Fastr_Client IgnoreGuiInset, fixed typo

--- a/default.project.json
+++ b/default.project.json
@@ -30,7 +30,10 @@
         },
         "Active": {
           "$className": "ScreenGui",
-          "$path": "src/Client/Active"
+          "$path": "src/Client/Active",
+          "$properties": {
+            "IgnoreGuiInset": true
+          }
         }
       }
     }
